--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "inputmask": "^4.0.9",
     "vue": "^2.5.11",
     "vue-router": "^3.1.3"
   },
