--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "inputmask": "^4.0.9",
     "vue": "^2.5.11",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuejs-datepicker": "^1.6.2"
   },
   "browserslist": [
     "> 1%",
